# ChangeLog for app-emulation/emul-linux-x86-xlibs
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/emul-linux-x86-xlibs/ChangeLog,v 1.67 2007/11/28 06:37:43 kingtaco Exp $

*emul-linux-x86-xlibs-20071128 (28 Nov 2007)

  28 Nov 2007; Mike Doty <kingtaco@gentoo.org>
  +emul-linux-x86-xlibs-20071128.ebuild:
  ebuild bump, bug 200426

  24 Nov 2007; Mike Doty <kingtaco@gentoo.org>
  emul-linux-x86-xlibs-20071114.ebuild:
  amd64 stable for releng

*emul-linux-x86-xlibs-20071114 (14 Nov 2007)

  14 Nov 2007; Mike Doty <kingtaco@gentoo.org>
  +emul-linux-x86-xlibs-20071114.ebuild:
  New emul-linux-x86-* build system.  Latest x86 stable packages.

  29 Aug 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing herbs from metadata due to his retirement (see #88780 for reference).

*emul-linux-x86-xlibs-10.1 (18 Aug 2007)

  18 Aug 2007; Olivier Crête <tester@gentoo.org>
  +emul-linux-x86-xlibs-10.1.ebuild:
  Updated mesa and drm, bug #172009

  30 Jul 2007; Donnie Berkholz <dberkholz@gentoo.org>;
  emul-linux-x86-xlibs-7.0-r8.ebuild, emul-linux-x86-xlibs-10.0.ebuild:
  Move eselect-opengl into DEPEND only, so it can be uninstalled later.

  02 Jul 2007; Piotr Jaroszyński <peper@gentoo.org>
  emul-linux-x86-xlibs-7.0-r8.ebuild:
  (QA) RESTRICT clean up.

  10 Mar 2007; Simon Stelling <blubb@gentoo.org> ChangeLog:
  repair ChangeLog

  02 Mar 2007; Simon Stelling <blubb@gentoo.org>
  emul-linux-x86-xlibs-10.0.ebuild:
  stable on amd64; a bit preliminary as we need this in the 2007.0 release

  21 Feb 2007; Simon Stelling <blubb@gentoo.org>
  emul-linux-x86-xlibs-10.0.ebuild:
  use the new emul-libs.eclass

  19 Feb 2007; Simon Stelling <blubb@gentoo.org>
  emul-linux-x86-xlibs-10.0.ebuild:
  it's RESTRICT=strip

*emul-linux-x86-xlibs-10.0 (18 Feb 2007)

  18 Feb 2007; Simon Stelling <blubb@gentoo.org>
  +emul-linux-x86-xlibs-10.0.ebuild:
  version bump; fixes bug 133705 and bug 162099
