@@ -1,6 +1,12 @@
 # ChangeLog for app-emulation/emul-linux-x86-xlibs
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/emul-linux-x86-xlibs/ChangeLog,v 1.67 2007/11/28 06:37:43 kingtaco Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/emul-linux-x86-xlibs/ChangeLog,v 1.68 2007/11/28 22:56:14 wolf31o2 Exp $
+
+*emul-linux-x86-xlibs-20071128-r1 (28 Nov 2007)
+
+  28 Nov 2007; Chris Gianelloni <wolf31o2@gentoo.org>
+  +emul-linux-x86-xlibs-20071128-r1.ebuild:
+  Revision bump on request of KingTaco on #gentoo-releng.
 
 *emul-linux-x86-xlibs-20071128 (28 Nov 2007)
 
